- Made Asteroid and Comet science into Sun-only science to prevent them from showing up in weird (but valid according to the game) scenarios.  Prevents contracts for things like "comet sample while landed on Kerbin" (thanks Lathari).
- Cleaned up some duplicated name in the contract type selection settings window (thanks gamerscircle).
- Added Experiment.ID().

Contract Configurator 1.30.2
- Backport localization tags missing from KSP 1.8 into Contract Configurator (thanks MatjaBrown, TomTheHand, IonTracks & Lignite).

Contract Configurator 1.30.1
- Translation for Chinese Simplified (thanks tinygrox).
- Restore compatibility back to KSP 1.8.1.
- General improvements to error handling.
- Fixed exception in CollectionScience title when there is no targetBody (thanks Morphisor).

Contract Configurator 1.30.0
- Recompile against KSP 1.10.1.
- Localization support.
- Added Format() function to expressions to support better contract pack localization.
- Partial translation for Chinese Simplified (thanks tinygrox).
- Support for Breaking Ground science.
- Support for comet science.
- Added Mission Control icons for Sentinel (KSP 1.3) and Robotics (Breaking Ground) stock contracts.
- Significant cleanup of string addition to reduce garbage generation.
- Support all tracking station object size classes up to I in SpawnVessel.
- Allow apostrophe in AgentParser, fixes Kerbin-Side Jobs.
- Improved some validation in Requirement nodes to throw certain errors at contract validation time instead of at run-time.
- Fixed issue where biomes without a Celestial Body (targetBody) specified weren't smart enough to figure out which body they were for.

Contract Configurator 1.29.0
- Recompile against KSP 1.9.1.
- Fixed various vessel spawning issues.

Contract Configurator 1.28.3
- More changes to AgentParser, now commas are disallowed as part of agent names (thanks Tonas1997).